<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Point</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="categoryPageDesc">Choose a Category</string>
    <string name="wordPageDesc">Select up to 4 Words</string>
    <string name="newCategoryPageDesc">Select a Category</string>
    <string name="savedPagesDesc">Select a Saved Page</string>
    <string name="newWordPageDesc">Add New Word</string>
    <string name="arrangePageDesc">Arrange Page</string>
    <string name="category">Categories</string>
    <string name="title_activity_word_page">WordPage</string>
    <string name="title_activity_new_category">NewCategory</string>
    <string name="new_category">Add New Category</string>
    <string name="new_word">Add New Word</string>
    <string name="category_field">Category:</string>
    <string name="word_field">Word:</string>
    <string name="image_field"> Image:</string>
    <string name="voice_field">Voice:</string>
    <string name="insert_category_field_text">Insert Category Name Here</string>
    <string name="insert_word_field_text">Insert Word Name Here</string>
    <string name="insert_import_field_text">Import</string>
    <string name="insert_takePhoto_field_text">Take Photo</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_page_button">Save Page</string>
    <string name="title_activity_new_word">NewWord</string>
    <string name="title_activity_arrange_page">ArrangePage</string>
    <string name="done_button">Done</string>
    <string name="title_activity_kiddo_page">KiddoPage</string>
    <string name="save_page_prompt">Please type name for Page</string>
    <string name="then">Then:</string>
    <string name="first">First:</string>
    <string name="barHeaderLeft">Selected Words:</string>
    <string name="barHeaderRight">Switch View:</string>
    <string name="addNew">Add New</string>
    <string name="kiddoPageBackText">Press and Hold the caret to go back</string>

    <string name="oldwordPageDesc">Select 1 to 4 Words</string>
    <string name="oldnewCategoryPageDesc">Add a Category</string>
    <string name="oldCategory">All Categories</string>

</resources>
