<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="info498.group3.pocketpoint.NewCategory"
    android:background="@color/header"
    android:id="@+id/newCategory">





    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newCategoryPageDesc"
        android:textColor="@color/txtHeader"
        android:id="@+id/txtTitle"
        android:textSize="@dimen/title_size"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:text="New Text"
        android:id="@+id/txtLineHeader"
        android:layout_below="@+id/txtTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/txtHeader"/>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@id/txtLineHeader"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="@dimen/title_size"
            android:layout_height="@dimen/title_size"
            android:id="@+id/imgBackButton"
            android:src="@drawable/backarrow"
            />
    </LinearLayout>



    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/txtTitle"
        android:background="@color/body">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/input_fields_margin"
            android:layout_marginStart="@dimen/input_fields_margin"
            android:layout_marginLeft="@dimen/input_fields_margin"
            android:layout_marginRight="@dimen/input_fields_margin"
            android:gravity="center"
            android:id="@+id/linlayCategoryField"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_field"
                android:id="@+id/txtCategoryField"
                android:textSize="@dimen/input_fields_text"
                android:textColor="@color/txtHeader"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtxtCategoryField"
                android:inputType="text"
                android:textColorHint="#ff000000"
                android:hint="@string/insert_category_field_text"
                android:background="#ffffffff"
                android:textSize="@dimen/input_fields_text"
                android:layout_marginLeft="@dimen/input_fields_margin"
                android:textColor="#ff000000"
                android:paddingLeft="5dp"/>



            </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linlayCategoryField"
            android:layout_marginTop="@dimen/input_fields_margin"
            android:layout_marginStart="@dimen/input_fields_margin"
            android:layout_marginLeft="@dimen/input_fields_margin"
            android:layout_marginRight="@dimen/input_fields_margin"
            android:gravity="center"
            android:id="@+id/linlayImageField"
            android:orientation="horizontal">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_field"
                android:id="@+id/txtImageField"
                android:textSize="@dimen/input_fields_text"
                android:textColor="@color/txtHeader"
                android:layout_weight="0.04"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insert_import_field_text"
                android:id="@+id/btnImport"
                android:layout_weight=".15"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insert_takePhoto_field_text"
                android:id="@+id/btnTakePhoto"
                android:layout_weight=".15"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linlayImageField"
            android:layout_marginTop="@dimen/input_fields_margin"
            android:layout_marginStart="@dimen/input_fields_margin"
            android:layout_marginLeft="@dimen/input_fields_margin"
            android:layout_marginRight="@dimen/input_fields_margin"
            android:gravity="center"
            android:id="@+id/linlayImagePreview"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:id="@+id/imgPreview"
                android:visibility="invisible"
                />

        </LinearLayout>



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            android:id="@+id/btnCancel"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/input_fields_margin"
            android:layout_marginLeft="@dimen/input_fields_margin"
            android:layout_marginBottom="@dimen/input_fields_margin"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button"
            android:id="@+id/btnSave"
            android:enabled="false"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/linlayImageField"
            android:layout_alignEnd="@+id/linlayImageField"
            android:layout_marginEnd="@dimen/input_fields_margin"
            android:layout_marginRight="@dimen/input_fields_margin"
            android:layout_marginBottom="@dimen/input_fields_margin"/>

    </RelativeLayout>


</RelativeLayout>


