<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="info498.group3.pocketpoint.NewCategory"
    android:background="#ff000000"
    android:id="@+id/Word">





    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newWordPageDesc"
        android:textColor="#ffff231c"
        android:id="@+id/txtTitle"
        android:textSize="@dimen/title_size"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:text="New Text"
        android:id="@+id/txtLineHeader"
        android:layout_below="@+id/txtTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#ffff231c"/>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@id/txtLineHeader"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="@dimen/title_size"
            android:layout_height="@dimen/title_size"
            android:id="@+id/imgBackButton"
            android:src="@drawable/backarrow"
            />
    </LinearLayout>





    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtLineHeader"
        android:layout_marginTop="@dimen/input_fields_margin"
        android:layout_marginStart="@dimen/input_fields_margin"
        android:layout_marginLeft="@dimen/input_fields_margin"
        android:layout_marginRight="@dimen/input_fields_margin"
        android:gravity="center"
        android:id="@+id/linlayWordField"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/word_field"
            android:id="@+id/txtWordField"
            android:textSize="@dimen/input_fields_text"
            android:textColor="#ffff231c"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtxtWordField"
            android:inputType="text"
            android:textColorHint="#ff000000"
            android:hint="@string/insert_word_field_text"
            android:background="#ffffffff"
            android:textSize="@dimen/input_fields_text"
            android:layout_marginLeft="@dimen/input_fields_margin"
            android:textColor="#ff000000"
            android:paddingLeft="5dp"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linlayWordField"
        android:layout_marginTop="@dimen/input_fields_margin"
        android:layout_marginStart="@dimen/input_fields_margin"
        android:layout_marginLeft="@dimen/input_fields_margin"
        android:layout_marginRight="@dimen/input_fields_margin"
        android:gravity="center"
        android:id="@+id/linlayVoiceField"
        android:orientation="horizontal"
        android:background="#ffffffff">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voice_field"
            android:id="@+id/txtVoiceField"
            android:textSize="@dimen/input_fields_text"
            android:textColor="#ffff231c"
            android:background="#ff000000"
            android:layout_weight="0.03"
            />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/imgRecord"
            android:layout_weight="0.2"
            android:src="@drawable/record"/>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/imgPlay"
            android:layout_weight="0.2"
            android:background="#00ffffff"
            android:src="@drawable/play"/>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/imgPause"
            android:layout_weight="0.2"
            android:src="@drawable/pausebutton"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/imageView"
            android:layout_weight="0.2"
            android:src="@drawable/x"/>


      </LinearLayout>




    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linlayVoiceField"
        android:layout_marginTop="@dimen/input_fields_margin"
        android:layout_marginStart="@dimen/input_fields_margin"
        android:layout_marginLeft="@dimen/input_fields_margin"
        android:layout_marginRight="@dimen/input_fields_margin"
        android:gravity="center"
        android:id="@+id/linlayImageField"
        android:orientation="horizontal">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_field"
            android:id="@+id/txtImageField"
            android:textSize="@dimen/input_fields_text"
            android:textColor="#ffff231c"
            android:layout_weight="0.04"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_import_field_text"
            android:id="@+id/btnImport"
            android:layout_weight=".15"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_takePhoto_field_text"
            android:id="@+id/btnTakePhoto"
            android:layout_weight=".15"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linlayImageField"
        android:layout_marginTop="@dimen/input_fields_margin"
        android:layout_marginStart="@dimen/input_fields_margin"
        android:layout_marginLeft="@dimen/input_fields_margin"
        android:layout_marginRight="@dimen/input_fields_margin"
        android:gravity="center"
        android:id="@+id/linlayImagePreview"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:id="@+id/imgPreview"
            android:visibility="invisible"
            />

    </LinearLayout>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        android:id="@+id/btnCancel"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/input_fields_margin"
        android:layout_marginLeft="@dimen/input_fields_margin"
        android:layout_marginBottom="@dimen/input_fields_margin"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:id="@+id/btnSave"
        android:enabled="false"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/linlayImageField"
        android:layout_alignEnd="@+id/linlayImageField"
        android:layout_marginEnd="@dimen/input_fields_margin"
        android:layout_marginRight="@dimen/input_fields_margin"
        android:layout_marginBottom="@dimen/input_fields_margin"/>


</RelativeLayout>



