<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/kiddoPageBackground">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/btnBackButton"
            android:src="@drawable/button_caret"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtBack"
            android:textSize="22dp"
            android:textColor="@color/txtKiddoPage"
            android:text="@string/kiddoPageBackText"
            android:visibility="invisible"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="match_parent"
            android:id="@+id/now"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:visibility="visible"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:layout_marginRight="50dp"
            android:layout_marginEnd="50dp">

                <TextView android:id="@+id/txtNow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="120dp"
                    android:text="@string/first"
                    android:textColor="@color/txtNowThen"
                    android:layout_marginBottom="5dp"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="match_parent"
            android:id="@+id/iconOne"
            android:orientation="vertical"
            android:background="@drawable/gridview_button_rounded"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:layout_marginRight="50dp"
            android:layout_marginEnd="50dp">


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/layoutTitleOne" >

                <TextView android:id="@+id/txtTitleOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="22dp"
                    android:textColor="@color/txtIcons"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5dp"/>

            </RelativeLayout>


            <ImageView android:id="@+id/imgIconOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="5dp"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="match_parent"
            android:id="@+id/then"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:layout_marginRight="50dp"
            android:layout_marginEnd="50dp"
            >

                <TextView android:id="@+id/txtThen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="120dp"
                    android:text="@string/then"
                    android:textColor="@color/txtNowThen"
                    android:layout_marginBottom="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="match_parent"
            android:id="@+id/iconTwo"
            android:orientation="vertical"
            android:background="@drawable/gridview_button_rounded"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:layout_marginRight="50dp"
            android:layout_marginEnd="50dp">


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/layoutTitleTwo" >

                <TextView android:id="@+id/txtTitleTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="22dp"
                    android:textColor="@color/txtIcons"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5dp"/>

            </RelativeLayout>


            <ImageView android:id="@+id/imgIconTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="5dp"
                />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>