<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="info498.group3.pocketpoint.ArrangePage"
    android:background="@color/header">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arrangePageDesc"
        android:textColor="@color/txtHeader"
        android:id="@+id/txtTitle"
        android:textSize="@dimen/title_size"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:text="New Text"
        android:id="@+id/txtLineHeader"
        android:layout_below="@+id/txtTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/txtHeader"/>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@id/txtLineHeader"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/title_size"
            android:layout_height="@dimen/title_size"
            android:id="@+id/imgBackButton"
            android:src="@drawable/backarrow"
            />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_page_button"
        android:id="@+id/button"
        android:layout_alignBottom="@+id/txtLineHeader"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/txtLineHeader"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/body">



        <LinearLayout
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:id="@+id/iconOne"
                android:orientation="vertical"
                android:background="@drawable/gridview_button_rounded"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:visibility="visible"
                android:layout_marginLeft="245dp"
                android:layout_marginStart="245dp"
                android:layout_marginTop="20dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">


            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/layoutTitleOne" >

                <TextView android:id="@+id/txtTitleOne"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="22dp"
                        android:textColor="@color/txtIcons"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="5dp"/>

                <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:id="@+id/btnRemoveOne"
                        android:background="@drawable/x"
                        android:layout_marginBottom="5dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />

            </RelativeLayout>


            <ImageView android:id="@+id/imgIconOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="5dp"
            />

        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/iconTwo"
            android:orientation="vertical"
            android:background="@drawable/gridview_button_rounded"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:visibility="visible"
            android:layout_alignTop="@+id/iconOne"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="233dp"
            android:layout_marginEnd="233dp">


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/layoutTitleTwo" >

                <TextView android:id="@+id/txtTitleTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="22dp"
                    android:textColor="@color/txtIcons"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5dp"/>

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:id="@+id/btnRemoveTwo"
                    android:background="@drawable/x"
                    android:layout_marginBottom="5dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>


            <ImageView android:id="@+id/imgIconTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="5dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/iconThree"
            android:orientation="vertical"
            android:background="@drawable/gridview_button_rounded"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:visibility="visible"
            android:layout_marginLeft="245dp"
            android:layout_marginStart="245dp"
            android:layout_marginBottom="20dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/layoutTitleThree" >

                <TextView android:id="@+id/txtTitleThree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="22dp"
                    android:textColor="@color/txtIcons"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5dp"/>

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:id="@+id/btnRemoveThree"
                    android:background="@drawable/x"
                    android:layout_marginBottom="5dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>


            <ImageView android:id="@+id/imgIconThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="5dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/iconFour"
            android:orientation="vertical"
            android:background="@drawable/gridview_button_rounded"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:visibility="visible"
            android:layout_alignTop="@+id/iconThree"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="233dp"
            android:layout_marginEnd="233dp">


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/layoutTitleFour" >

                <TextView android:id="@+id/txtTitleFour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="22dp"
                    android:textColor="@color/txtIcons"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5dp"/>

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:id="@+id/btnRemoveFour"
                    android:background="@drawable/x"
                    android:layout_marginBottom="5dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>


            <ImageView android:id="@+id/imgIconFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="5dp"
                />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done_button"
            android:id="@+id/btnDone"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />


    </RelativeLayout>

</RelativeLayout>


